[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python==0.2.0",
    "numpy==1.26.3",
    "opencv-python-headless==4.9.0.80",
    "piexif==1.1.3",
    "pillow==10.2.0",
    "python-telegram-bot==20.7",
]
